--- a/stmMaster/Linux/makefile
+++ b/stmMaster/Linux/makefile
@@ -27,7 +27,7 @@ EXTRA_INCLUDE = -I$(FW)/Project -I$(FW)/Libraries/CMSIS/ST/STM32F4xx/Include -I$
 #INCLUDE = $(EXTRA_INCLUDE) -I../inc -I$(INC_DISCOVERY) -I$(INC_STD_DRIVER) -I$(INC_USB_DEV) -I$(INC_USB_OTG) -I$(INC_USB_CDC) -I$(INC_USB_HID) -I$(INC_USB_CDC) -I$(INC_FAST_M) 
 INCLUDE = -I../inc
 
-DEFS += -DUSE_STDPERIPH_DRIVER -DSTM32F4XX -D__FPU_PRESENT="1" -DMANGUSTA_DISCOVERY -DARM_MATH_CM4 -DHSE_VALUE=8000000 -DUSE_USB_OTG_FS -D_STM_CDC
+DEFS += -DUSE_STDPERIPH_DRIVER -DSTM32F4XX -D__FPU_PRESENT="1" -DMANGUSTA_DISCOVERY -DARM_MATH_CM4 -DHSE_VALUE=8000000 -DUSE_USB_OTG_FS -D_STM_CDC -D_SIMULATION 
 LIBS = -lm -lc
 MC_FLAGS = -mcpu=cortex-m4 -mthumb -mlittle-endian -mfpu=fpv4-sp-d16 -mfloat-abi=hard -fsingle-precision-constant -nostartfiles  -mthumb-interwork 
 AS_FLAGS = 
